# chameleos

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: cd.yml
chamel/: Cargo.toml
chamel/src/: main.rs
chameleos/: Cargo.toml
chameleos/src/: main.rs  render.rs  shader.rs  shader.wgsl
chameleos/src/render/: mod.rs
chameleos/src/state/: draw.rs  mod.rs  tablet.rs
src/: keybind.rs  lib.rs  main.rs  vertex.rs
