[package]
name = "chameleos"
version = "0.1.0"
edition = "2024"

[dependencies]
memmap2 = "0.9.8"
nix = { version = "0.30.1", features = ["fs"] }
wayland-backend = { version = "0.3.11", features = ["client_system"] }
wayland-client = "0.31.11"
wayland-protocols-wlr = { version = "0.3.9", features = ["client"] }
